config-root/boa/gateway.yaml
kind: Gateway
apiVersion: gateway.networking.k8s.io/v1beta1
metadata:
  name: boa-gateway
  namespace: boa
spec:
  gatewayClassName: gke-l7-global-external-managed
  listeners:
  - name: https
    protocol: HTTP
    port: 80
---
kind: HTTPRoute
apiVersion: gateway.networking.k8s.io/v1beta1
metadata:
  name: boa-gateway-http
  namespace: boa
spec:
  parentRefs:
  - kind: Gateway
    name: boa-gateway
#  hostnames:
#  - "store.example.com"
  rules:
  - backendRefs:
    - name: frontend
      port: 80
